fix (index) inout visibility

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -85,6 +85,7 @@
   }
 
   .header__search__input {
+    visibility: visible;
     border: none;
     padding: 5px 0;
     width: 80%;
